# GISMO

./: .editorconfig  .env.example  .gitignore  AGENTS.md  GISMO.pyw  Handoff.md  LICENSE  Makefile  Modelfile  Modelfile.ft  OBJECTIVES.md  README.md  STATUS.md  pyproject.toml
.codex/: config.toml
.codex/agents/: api-fixer.toml  reviewer.toml  (+6 more)
docs/: ARCHITECTURE.md  ASK_CONTRACT.md  DECISIONS.md  MEMORY_CONTRACT.md  OPERATOR.md
gismo/: __init__.py  onboarding.py
notebooks/: gismo_finetune_colab.ipynb
policy/: dev-operator.json  dev-safe-profiles.json  dev-safe.json  dev.json  readonly.json
scripts/: e2e_smoke.ps1  operator_smoke.ps1  verify.py
tests/: test_agent_cli.py  test_agent_roles_cli.py  test_agent_session_cli.py  test_ask_cli.py  test_background_worker.py  test_calendar_tool.py  test_cli_main.py  test_daemon_queue.py  test_db_handle_guardrails.py  test_device_tool.py  test_e2e_smoke_cli.py  test_export.py  test_ipc.py  test_maintain_cli.py  test_maintenance.py  test_memory_cli.py  test_memory_doctor_cli.py  test_memory_explain_cli.py  test_memory_injection_trace.py  test_memory_preview_cli.py  test_memory_profile_cli.py  test_memory_retention.py  test_memory_snapshot.py  test_memory_summarize_cli.py  test_model_policy.py  test_ollama_client.py  test_ollama_integration.py  test_operator_shell.py  test_package_metadata.py  test_plan_approval.py  test_plan_assess.py  test_policy_defaults.py  test_policy_dev_safe.py  test_prompt_policy.py  test_queue_cli.py  test_run_show_cli.py  test_smoke.py  test_state_store.py  test_supervise.py  test_tool_receipts.py  (+7 more)
(+70 files in other folders)
